added swagger and delete unused variable

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en-GB" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>GHKG - Home</title>
     <meta charset="UTF-8"/>
@@ -8,12 +8,14 @@
 <h1>Welcome to GHKG App</h1>
 
 <ul>
-    <li><a href="/login">Login</a></li>
-    <li><a href="/user">User Panel</a></li>
-    <li><a href="/admin">Admin Panel</a></li>
+    <li><a href="/login">Login Page</a></li>
+    <li><a href="/me">User Page</a></li>
+    <li><a href="/admin">Admin Page</a></li>
     <li><a href="/garage">Garage</a></li>
     <li><a href="/trips">Trips</a></li>
+    <li><a href="/swagger-ui/index.html">Swagger UI</a></li>
 </ul>
+
 
 <hr>
 <div>
