--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,19 +9,43 @@
 
 <ul>
     <li><a href="/login">Login Page</a></li>
-    <li><a href="/me">User Page</a></li>
-    <li><a href="/admin">Admin Page</a></li>
+    <li id="meLink" style="display: none;"><a href="/me">User Info</a></li>
+    <li id="adminLink" style="display: none;"><a href="/admin">Admin Panel</a></li>
     <li><a href="/garage">Garage</a></li>
     <li><a href="/trips">Trips</a></li>
-    <li><a href="/swagger-ui/index.html">Swagger UI</a></li>
+    <li><a href="/swagger-ui/index.html" target="_blank">Swagger UI</a></li>
 </ul>
 
-
 <hr>
-<div>
-    <strong>Build Info:</strong>
-    <span th:text="${version} ?: 'No info'"></span>
-</div>
+<p>Version: <span th:text="${version}">unknown</span></p>
+
+<script>
+    const token = localStorage.getItem("token");
+
+    if (token) {
+        document.getElementById("meLink").style.display = "list-item";
+
+        fetch("/me", {
+            headers: {
+                "Authorization": "Bearer " + token
+            }
+        })
+            .then(response => {
+                if (!response.ok) throw new Error("Unauthorized");
+                return response.json();
+            })
+            .then(data => {
+                const roles = data.roles || [];
+                if (roles.includes("ADMIN")) {
+                    document.getElementById("adminLink").style.display = "list-item";
+                }
+            })
+            .catch(() => {
+                localStorage.removeItem("token");
+            });
+    }
+</script>
+
 
 </body>
 </html>
