--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html lang="en-GB" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>GHKG - Home</title>
     <meta charset="UTF-8"/>
+    <title>GHKG - Home</title>
+    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+          integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7T+LnbwGd2e1z5zZh1HcZd9I0gUksdQRVox" rel="stylesheet">
 </head>
 <body>
-<h1>Welcome to GHKG App</h1>
+<div class="container mt-4">
+    <h1 class="text-center mb-4">Welcome to GHKG App</h1>
 
-<ul>
-    <li id="loginLink"><a href="/login">Login Page</a></li>
-    <li id="meLink" style="display: none;"><a href="/me">User Info</a></li>
-    <li id="adminLink" style="display: none;"><a href="/admin">Admin Panel</a></li>
-    <li><a href="/garage">Garage</a></li>
-    <li><a href="/trips">Trips</a></li>
-    <li><a href="/swagger-ui/index.html" target="_blank">Swagger UI</a></li>
-</ul>
+    <ul class="list-group mb-4">
+        <li class="list-group-item"><a href="/login">Login Page</a></li>
+        <li class="list-group-item" id="meLink" style="display: none;"><a href="/me">User Info</a></li>
+        <li class="list-group-item" id="adminLink" style="display: none;"><a href="/admin">Admin Panel</a></li>
+        <li class="list-group-item"><a href="/garage">Garage</a></li>
+        <li class="list-group-item"><a href="/trips">Trips</a></li>
+        <li class="list-group-item"><a href="/swagger-ui/index.html" target="_blank">Swagger UI</a></li>
+    </ul>
 
-<div id="authActions" style="margin-top: 10px;"></div>
-
-<hr>
-<p>Version: <span th:text="${version}">unknown</span></p>
+    <footer class="text-muted text-center">
+        <p>Version: <span th:text="${version}">unknown</span></p>
+    </footer>
+</div>
 
 <script>
     const token = localStorage.getItem("token");
