--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
-<html lang="en-GB" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+<html lang="en-GB"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
-    <title layout:title-pattern="$LAYOUT_TITLE - GHKG">GHKG</title>
+    <title layout:fragment="title">GHKG App</title>
     <link crossorigin="anonymous"
           href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
           integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7T+LnbwGd2e1z5zZh1HcZd9I0gUksdQRVox"
           rel="stylesheet">
 </head>
 <body>
+
 <div class="container mt-4">
-    <header class="mb-4">
-        <h1 class="text-center">GHKG App</h1>
-    </header>
+    <!-- Dynamiczne H1 -->
+    <h1 class="text-center mb-4" th:text="${pageTitle}">GHKG App</h1>
 
-    <main layout:fragment="content"></main>
+    <main layout:fragment="content">
+        <!-- default content -->
+        <p>Welcome</p>
+    </main>
 
-    <footer class="text-muted text-center mt-4">
+    <footer class="text-muted text-center mt-5">
         <p>Version: <span th:text="${version}">unknown</span></p>
     </footer>
 </div>
+
 </body>
 </html>
