--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en-GB" layout:decorate="~{base}"
+<html layout:decorate="~{base}"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 >
 <head>
-    <title>Home</title>
+    <title layout:fragment="title">Home Page</title>
 </head>
 <body>
 <main layout:fragment="content">
